--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -2,18 +2,20 @@ server:
   port: 8080
 
 spring:
+  application:
+    name: api-gateway
   cloud:
     gateway:
       routes:
         - id: info-service
-          uri: http://localhost:8081
+          uri: lb://book-info-service
           predicates:
             - Path=/info/**
           filters:
             - StripPrefix=1
 
         - id: rating-service
-          uri: http://localhost:8082
+          uri: lb://book-rating-service
           predicates:
             - Path=/rating/**
 
@@ -21,7 +23,7 @@ spring:
             - StripPrefix=1
 
         - id: catalog-service
-          uri: http://localhost:8083
+          uri: lb://book-catalog-service
           predicates:
             - Path=/catalog/**
 
